--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
-                        <li><a href="soon.html">Restoration</a></li>
+                        <li><a href="restore.html">Restoration</a></li>
                         <li><a href="run.html">Endurance</a></li>
-                        <li><a href="soon.html">Art</a></li>
+                        <li><a href="art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -72,6 +72,10 @@
 
         <div class="row">
             <div class="col-md-6 resume">
+                <div class="text-center" style="color:white;">
+                    <p>Former Ecologist on a mission to advance conservation and land use projects using spatial analysis and mapping. </p>
+                    <p>As anEcologist, I developed and implemented science-based ecological restoration in southwest Wisconsin, where I developed an intimate relationship with the land. In advancing my GIS, programming, and design skills through an M.S. in GIS and Cartography at UW-Madison (2021), I now explore human-land use interactions from a bird’s eye view. I currently live in North Bend, Washington.</p>
+                </div>
                 <div class="text-center">
                     <a href="/assets/Marion_Stacey_resume_web.pdf" target="_blank" rel="noopener noreferrer">
                         <button class = "btn btn-dark btn-lg">Resume</button>
