--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Maps</a></li>
                         <li><a href="fire.html">Fire</a></li>
-                        <li><a href="soon.html">Restoration</a></li>
-                        <li><a href="soon.html">Endurance</a></li>
-                        <li><a href="soon.html">Art</a></li>
+                        <li><a href="restore.html">Restoration</a></li>
+                        <li><a href="run.html">Endurance</a></li>
+                        <li><a href="art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -69,8 +69,9 @@
     <div class="row">
         <div class="text-center" style="color:white; font-family:'Montserrat';">
             <div class="offset-md-1 col-md-10 offset-md-1">
-                <h3><strong>Instagram:</strong> <a href="https://www.instagram.com/stacemarion/" target="_blank"> @stacemarion</a></h3>
                 <h3><strong>LinkedIn</strong> <a href="www.linkedin.com/in/stacey-marion" target="_blank"> linkedin.com/in/stacey-marion</a></h3>
+                <h3><strong>Instagram:</strong> <a href="https://www.instagram.com/stacemarion/" target="_blank"> @stacemarion</a></h3>
+                
             </div>
         </div>
     </div>
