--- a/fire.html
+++ b/fire.html
@@ -50,9 +50,9 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
-                        <li><a href="soon.html">Restoration</a></li>
+                        <li><a href="restore.html">Restoration</a></li>
                         <li><a href="run.html">Endurance</a></li>
-                        <li><a href="soon.html">Art</a></li>
+                        <li><a href="art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -61,7 +61,7 @@
 
     <div class="jumbotron maps">
         <div class="container">
-            <h3>Fire</h3>
+            <h3 style="text-align:left; margin-left:8%" >Fire</h3>
         </div>
     </div>
 
@@ -70,7 +70,7 @@
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
                     <p class="portfolio-description">
-                        I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I strive to implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
+                        I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I collaboratively implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
                     </p> 
                     <br><br>
                     <h2 class="portfolio-title">WEB MAP: A look at certified prescribed burn programs across the country<br> </h2>
