--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>        
                 
                 <div class="container text-cetner">
-                        <a href="/soon.html">
+                        <a href="/restore.html">
                             <button class = "btn btn-lg">Restoration</button>
                             </a>
                 </div>
@@ -62,7 +62,7 @@
                             </a>
                 </div>
                 <div class="container text-center">
-                        <a href="soon.html">
+                        <a href="art.html">
                             <button class = "btn btn-lg">Art</button>
                             </a>
                 </div>
