--- a/maps.html
+++ b/maps.html
@@ -50,9 +50,9 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Portfolio</a></li>
                         <li><a href="fire.html">Fire</a></li>
-                        <li><a href="soon.html">Restoration</a></li>
-                        <li><a href="soon.html">Endurance</a></li>
-                        <li><a href="soon.html">Art</a></li>
+                        <li><a href="restore.html">Restoration</a></li>
+                        <li><a href="run.html">Endurance</a></li>
+                        <li><a href="art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
