--- a/portfolio/pbc.html
+++ b/portfolio/pbc.html
@@ -45,10 +45,11 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="/about.html">About</a></li>
+                        <li><a href="/maps.html">Portfolio</a></li>
                         <li><a href="/fire.html">Fire</a></li>
-                        <li><a href="/soon.html">Restoration</a></li>
-                        <li><a href="/soon.html">Endurance</a></li>
-                        <li><a href="/soon.html">Art</a></li>
+                        <li><a href="/restore.html">Restoration</a></li>
+                        <li><a href="/run.html">Endurance</a></li>
+                        <li><a href="/art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -64,7 +65,7 @@
     <div class="resume">
     <div class="container">
         <div class="row">
-            <div class="offset-md-1 col-md-10 offset-md-1">
+            <div class="offset-md-1 col-md-10 offset-md-1 maps">
                 <br>
                 <h2 class="portfolio-title">Pheasant Branch Conservancy, Wayfinding <br> <br> </h2>
                 <p class="portfolio-description">
@@ -75,6 +76,8 @@
                     <i>Wayfinding in Pheasant Branch Conservancy</i> was produced in conjunction with an update of the City of Middleton’s Pheasant Branch Conservancy: Bock Forest interpretive signage, and an Addendum to the Bock Forest Management Plan, written as an employee of Adaptive Restoration, LLC. The written Addendum serves as a management plan for City staff, whereas the panels and wayfinding map were produced for Conservancy visitors and are displayed at the Bock Forest kiosk. 
                 </p>
             </div>
+        </div>
+        <div class="row" style="height:60px;">
         </div>
         <div class="row">
             <div class="offset-md-2 col-md-8 offset-md-2 portfolio-image">
