--- a/portfolio/veracruz.html
+++ b/portfolio/veracruz.html
@@ -45,10 +45,11 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="/about.html">About</a></li>
+                        <li><a href="/maps.html">Portfolio</a></li>
                         <li><a href="/fire.html">Fire</a></li>
-                        <li><a href="/soon.html">Restoration</a></li>
-                        <li><a href="/soon.html">Endurance</a></li>
-                        <li><a href="/soon.html">Art</a></li>
+                        <li><a href="/restore.html">Restoration</a></li>
+                        <li><a href="/run.html">Endurance</a></li>
+                        <li><a href="/art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -64,17 +65,17 @@
     <div class="resume">
     <div class="container">
         <div class="row">
-            <div class="offset-md-1 col-md-10 offset-md-1">
+            <div class="offset-md-1 col-md-10 offset-md-1 maps">
                 <br>
                 <h2 class="portfolio-title">From Veracruz to Wisconsin<br> <br> </h2>
                 <p class="portfolio-description">
                     This storymap conveys the stories of several interlopers working in Wisconsin's dairy industry. The characters are pseudonyms, however, reflect the true stories of immigrants interviewed by Dustin Cohan, PhD candidate. (viewable with an ArcGIS online account)
                 </p> 
-            </div>   
+            </div>  
+            <div class="col-md-12" style="height:60px;">
+            </div> 
             <div class="col-md-12"> 
-                <iframe src="https://storymaps.arcgis.com/stories/67e04bf9d4da49a3ac3555d3ddd63ec7" width="100%" height="650px" frameborder="0" allow="geolocation"></iframe></a></li>
-            
-            
+                <iframe src="https://storymaps.arcgis.com/stories/67e04bf9d4da49a3ac3555d3ddd63ec7" width="100%" height="550px" frameborder="0" allow="geolocation"></iframe></a></li>          
             </div>
         </div>
         <div class="row" style="height:60px;">
