--- a/portfolio/sweden.html
+++ b/portfolio/sweden.html
@@ -45,10 +45,11 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="/about.html">About</a></li>
+                        <li><a href="/maps.html">Portfolio</a></li>
                         <li><a href="/fire.html">Fire</a></li>
-                        <li><a href="/soon.html">Restoration</a></li>
-                        <li><a href="/soon.html">Endurance</a></li>
-                        <li><a href="/soon.html">Art</a></li>
+                        <li><a href="/restore.html">Restoration</a></li>
+                        <li><a href="/run.html">Endurance</a></li>
+                        <li><a href="/art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -64,7 +65,7 @@
     <div class="resume">
     <div class="container">
         <div class="row">
-            <div class="col-md-10 col-md-offset-2 col-xs-10 col-xs-offset-1">
+            <div class="offset-md-1 col-md-10 offset-md-1">
                 <br>
                 <h2 class="portfolio-title">COVID-19 in Sweden <br> <br> </h2>
                 <p class="portfolio-description">
