--- a/portfolio/wildfire2.html
+++ b/portfolio/wildfire2.html
@@ -45,10 +45,11 @@
                     <ul class="nav navbar-nav">
                         <!-- Unordered list for links on navbar -->
                         <li><a href="/about.html">About</a></li>
+                        <li><a href="/maps.html">Portfolio</a></li>
                         <li><a href="/fire.html">Fire</a></li>
-                        <li><a href="/soon.html">Restoration</a></li>
+                        <li><a href="/restore.html">Restoration</a></li>
                         <li><a href="/run.html">Endurance</a></li>
-                        <li><a href="/soon.html">Art</a></li>
+                        <li><a href="/art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
             </div> <!-- end .container -->
@@ -64,13 +65,14 @@
     <div class="resume">
     <div class="container">
         <div class="row">
-            <div class="offset-md-1 col-md-10 offset-md-1">
+            <div class="offset-md-1 col-md-10 offset-md-1 maps">
                 <br>
                 <h2 class="portfolio-title">  Wildfire at the Backdoor <br> <br> </h2>
                 <p class="portfolio-description">
                     The Wildfire at the Backdoor storymap explores the human dimension of wildfire, particularly in the urbanized west coast. The storymap makes use of ESRI’s web mapping features, allowing for multiple map overlays that lead the viewer through the storymap’s narrative. The visual theme is meant to evoke a feeling of proximity to fire. The story begins with a recent scene from smoke-covered San Francisco, and throughout the story images of fires and firefighters bring the experience closer to the viewer. Fixed frame maps sequentially highlight different aspects of historical wildfires; historical perimeters, relative size, and ignition cause.  Sequential maps further incorporate related human factors, like population density, urban centers and housing development in the wildland-urban interface. Finally a bivariate maps and map overlays connect wildfire occurrence with fringe population areas, or wildland-urban interface areas where human ignitions are common. (viewable with an ArcGIS online account)
                 </p> 
             </div>   
+            <div class="col-md-12" style="height:60px;"></div>
             <div class="col-md-12"> 
                 <iframe src="https://storymaps.arcgis.com/stories/7fac33131f46426f971106aad960547d" width="100%" height="500px" frameborder="0" allow="geolocation"></iframe></a></li>
             
