--- a/restore.html
+++ b/restore.html
@@ -77,7 +77,7 @@
                         <img class="card-img-top" src="assets/DSC00968-4.png" alt="Portrait"> -->
 					<!--</a>-->
             </div>
-            <div class="col-md-7 resume">
+            <div class="col-md-7 resume restore">
                 <div class="text-center" style="color:rgb(0, 0, 0); padding-top:1%;">
                     <p>As an Ecologist, I planned and implemented ecological restoration in southern Wisconsin with private landowners, municipalities, and non-profits (2016-2021). My work focused on restoration of native prairie and oak-dominated communities, including prairie planting and maintenance, restorative forestry, and prescribed burning. </p>
 
