--- a/run.html
+++ b/run.html
@@ -95,7 +95,7 @@
                     <br>
                     <h2 style="font-size: 22px;">Nordic Skiing</h2>
                     <br>
-                    <p> American Birkebeiner Skate ~50k  | 2014-2021  | Hightest result: 18th female/104 overall
+                    <p> American Birkebeiner Skate ~50k  | 2014-2021  | Highest result: 18th female/104 overall
                         <br> 
                         Noquemanon Skate 50k   | January 2020 | 1st female/29th overall
                         <br>
@@ -113,9 +113,9 @@
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <!--<a href="portfolio/about.html">-->
+                    <!-- 
                         <img class="card-img-top mx-auto" src="assets/DSC01074-2.png" alt="Portrait" style="width:80%; padding-left:1%;">
-					<!--</a>-->
+					-->
                 </div>
             </div>
             <div class="col-md-10 text-center">
