--- a/fire.html
+++ b/fire.html
@@ -73,31 +73,76 @@
                         I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I collaboratively implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
                     </p> 
                     <br><br>
-                    <h2 class="portfolio-title">WEB MAP: A look at certified prescribed burn programs across the country<br> </h2>
+                    <h2 class="portfolio-title">Web Map: A look at certified prescribed burn programs across the country<br> </h2>
                     <p class="portfolio-description">
                         <a href="https://staceymarion.github.io/burnProgram/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
                     </p> 
                 </div>   
             </div>
         </div>
-            <div class="row" style="margin-left:10%; margin-right:10%;"> 
+
+        <div class="row" style="margin-left:9%; margin-right:9%;"> 
                     <iframe src="https://staceymarion.com/burnProgram/"  width = 100%  height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
-            </div>
-            <div class="row" style="height:60px;"> <!-- bumper row -->
-            </div>
+        </div>
+
+        <div class="row" style="height:60px;"> <!-- bumper row -->
+        </div>
+
          <div class="container">
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
-                    <h2 class="portfolio-title">WEB STORY: A prescribed fire needs assessment for Wisconsin<br> </h2>
+                    <h2 class="portfolio-title">Web Story: A prescribed fire needs assessment for Wisconsin<br> </h2>
                     <p class="portfolio-description">
                         <a href="https://staceymarion.github.io/fna/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
                     </p> 
                 </div>   
             </div>
         </div>
-        <div class="row" style="margin-left:10%; margin-right:10%;"> 
+
+        <div class="row" style="margin-left:9%; margin-right:9%;"> 
             <iframe src="https://staceymarion.com/fna/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
-    </div>
+        </div>
+
+        <div class="row" style="height:60px;"> <!-- bumper row -->
+        </div>
+
+        <div class="offset-md-1 col-md-10 offset-md-1"> <!-- first row of 3-way maps-->
+            <div class="row fire">
+                <div class="col-md-4 maps">
+                    <div class="card maps">
+                        <a href="portfolio/wi_prevention.html">
+                            <img class="card-img-top" src="assets/wi_prevention_thumbnail.png" alt="Wisconsin wildfire prevention infographic"></a>
+                        <div class="card-body">
+                            <h4 class="card-title"></h4>
+                            <a href="portfolio/wi_prevention.html" class="btn btn-secondary btn-block">Preventable Wildfire</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 maps">
+                    <div class="card maps">
+                        <a href="portfolio/wildfire2.html">
+                            <img class="card-img-top" src="assets/wildfire_storymap_thumbnail.png" alt="Wildfire at the Backdoor"></a>
+                        <div class="card-body">
+                            <h4 class="card-title"></h4>
+                            <a href="portfolio/wildfire2.html" class="btn btn-secondary btn-block">Wildfire at the Backdoor<i>(storymap)</i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 maps">
+                    <div class="card maps">
+                        <a href="portfolio/rxburn_sugar.html">
+                            <img class="card-img-top" src="assets/sugarriver_thumb.png" alt="Prescribed Burn Map: Sugar River SNA">
+                        </a>
+                        <div class="card-body">
+                            <h4 class="card-title"></h4>
+                            <a href="portfolio/rxburn_sugar.html" class="btn btn-secondary btn-block">Prescribed Burn Map: Sugar River SNA</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
