Replaced index page
About page as index

--- a/fire.html
+++ b/fire.html
@@ -49,7 +49,6 @@
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Portfolio</a></li>
-                        <li><a href="fire.html">Fire</a></li>
                         <li><a href="restore.html">Restoration</a></li>
                         <li><a href="run.html">Endurance</a></li>
                         <li><a href="art.html">Art</a></li>
@@ -61,7 +60,7 @@
 
     <div class="jumbotron maps">
         <div class="container">
-            <h3 style="text-align:left; margin-left:8%" >Fire</h3>
+            <h3 style="text-align:left; margin-left:8%" >Fire Advocacy</h3>
         </div>
     </div>
 
@@ -73,25 +72,7 @@
                         I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I collaboratively implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
                     </p> 
                     <br><br>
-                    <h2 class="portfolio-title">Web Map: A look at certified prescribed burn programs across the country<br> </h2>
-                    <p class="portfolio-description">
-                        <a href="https://staceymarion.github.io/burnProgram/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
-                    </p> 
-                </div>   
-            </div>
-        </div>
-
-        <div class="row" style="margin-left:9%; margin-right:9%;"> 
-                    <iframe src="https://staceymarion.com/burnProgram/"  width = 100%  height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
-        </div>
-
-        <div class="row" style="height:60px;"> <!-- bumper row -->
-        </div>
-
-         <div class="container">
-            <div class="row fire">
-                <div class="offset-md-1 col-md-10 offset-md-1">
-                    <h2 class="portfolio-title">Web Story: A prescribed fire needs assessment for Wisconsin<br> </h2>
+                    <h2 class="portfolio-title">Web Story: A prescribed fire needs assessment for Wisconsin <br> </h2>
                     <p class="portfolio-description">
                         <a href="https://staceymarion.github.io/fna/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
                     </p> 
@@ -100,7 +81,25 @@
         </div>
 
         <div class="row" style="margin-left:9%; margin-right:9%;"> 
-            <iframe src="https://staceymarion.com/fna/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
+                    <iframe src="https://staceymarion.com/fna/" width = 100%  height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
+        </div>
+
+        <div class="row" style="height:60px;"> <!-- bumper row -->
+        </div>
+
+         <div class="container">
+            <div class="row fire">
+                <div class="offset-md-1 col-md-10 offset-md-1">
+                    <h2 class="portfolio-title">Web Map: A look at certified prescribed burn programs across the country<br> </h2>
+                    <p class="portfolio-description">
+                        <a href="https://staceymarion.com/burnProgram/" target="_blank" rel="noopener noreferrer">See full webpage here.</a>  
+                    </p> 
+                </div>   
+            </div>
+        </div>
+
+        <div class="row" style="margin-left:9%; margin-right:9%;"> 
+            <iframe src="https://staceymarion.com/burnProgram/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
         </div>
 
         <div class="row" style="height:60px;"> <!-- bumper row -->
