--- a/run.html
+++ b/run.html
@@ -49,9 +49,8 @@
                         <!-- Unordered list for links on navbar -->
                         <li><a href="about.html">About</a></li>
                         <li><a href="maps.html">Portfolio</a></li>
-                        <li><a href="fire.html">Fire</a></li>
+                        <li><a href="fire.html">Fire Advocacy</a></li>
                         <li><a href="restore.html">Restoration</a></li>
-                        <li><a href="run.html">Endurance</a></li>
                         <li><a href="art.html">Art</a></li>
                     </ul>
                 </div> <!-- end .navbar-collapse -->
@@ -80,7 +79,9 @@
                     <br>
                     <h2 style="font-size: 22px;">Trail Running</h2>
                     <br>
-                    <p> White River 50 M  | July 31, 2021  | 1st overall
+                    <p> Ultra-Trail Harricana 125 k | Sept 10, 2021 | 5th female/15th overall 
+                        <br>
+                        White River 50 M  | July 31, 2021  | 1st overall
                         <br> 
                         Birkie Trail Run Marathon   | October 2020 | 2nd female/8th overall
                         <br>
