--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                
                 <div class="text-center">
-                    <a href="www.linkedin.com/in/stacey-marion" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/stacey-marion" target="_blank"></a>
                         <button class = "btn btn-dark btn-lg">LinkedIn</button>
                     </a>
                 </div>
