--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 </div>
                
                 <div class="text-center">
-                    <a href="https://www.linkedin.com/in/stacey-marion" target="_blank"></a>
-                        <button class = "btn btn-dark btn-lg">LinkedIn</button>
+                    <a href="https://www.linkedin.com/in/stacey-marion" target="_blank" class = "btn btn-dark btn-lg">LinkedIn </a>
+                        <!--<button class = "btn btn-dark btn-lg">LinkedIn</button>-->
                     </a>
                 </div>
               
