--- a/art.html
+++ b/art.html
@@ -70,7 +70,7 @@
         <div class="row fire"> <!-- row 1, 2 wide-->
             <div class="offset-md-1 col-md-10 offset-md-1">
                 <p>Inspired by the natural world. </p>
-                <p>Instagram: <a href="https://www.instagram.com/stacemarion/" target="_blank"> @stacemarion</a></p>
+                <!-- <p>Instagram: <a href="https://www.instagram.com/stacemarion/" target="_blank"> @stacemarion</a></p> -->
                 <br><br> 
             </div> 
 
