--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
             <div class="col-md-1"></div>
             <div class="col-md-6 resume">
                 <div class="text-center" style="color:white;">
-                    <p>Former ecologist on a mission to advance conservation and land use projects using spatial analysis and visualization. </p>
-                    <p>As an Ecologist, I developed and implemented science-based ecological restoration in southwest Wisconsin, where I developed an intimate relationship with the land. In advancing my GIS, programming, and design skills through an M.S. in GIS and Cartography at UW-Madison (2021), I now explore human-land use interactions from a bird’s eye view. I ultimately hope to inform conservation policy. I currently live in North Bend, Washington.</p>
+                    <p>GIS Analyst on a mission to advance conservation and land use projects using spatial analysis and visualization. </p>
+                    <p>As a Restoration Ecologist, I developed and implemented science-based ecological restoration in southwest Wisconsin, where I developed an intimate relationship with the land. In advancing my GIS, programming, and design skills through an M.S. in GIS and Cartography at UW-Madison (2021), I now explore human-land use interactions from a bird’s eye view. I ultimately hope to inform conservation policy. I currently live in North Bend, Washington.</p>
                 </div>
-                <div class="text-center">
+                <!-- <div class="text-center">
                     <a href="/assets/Marion_Stacey_resume_web.pdf" target="_blank" rel="noopener noreferrer">
                         <button class = "btn btn-dark btn-lg">Resume</button>
                         </a>
-                </div>
+                </div> -->
                
                 <div class="text-center">
                     <a href="https://www.linkedin.com/in/stacey-marion" target="_blank" class = "btn btn-dark btn-lg">LinkedIn </a>
