--- a/maps.html
+++ b/maps.html
@@ -67,14 +67,14 @@
 
 	<div class="resume">
     <div class="container">
-        <div class="row fire"> <!-- interactive maps, 2 wide-->
-            <div class="offset-md-1 col-md-10 offset-md-1">
+       <!-- <div class="row fire">  interactive maps, 2 wide-->
+            <!-- <div class="offset-md-1 col-md-10 offset-md-1">
                 <h2 class="portfolio-title" style="font-size:22px;">Code is accessible on <a href="https://github.com/staceymarion" target="_blank" rel="noopener noreferrer">github</a></h2>
                 <br><br> 
-            </div> 
+            </div>  -->
 
 
-            <div class="col-md-6 maps">
+            <!-- <div class="col-md-6 maps">
                 <div class="card maps">
                     <a href="https://staceymarion.com/burnProgram/" target="_blank" rel="noopener noreferrer">
                         <img class="card-img-top" src="assets/burn1.PNG" alt="Prescribed Fire: What Are Other States Doing?"></a>
@@ -95,9 +95,21 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>  -->
 
         <div class="row fire"> <!-- first row of 3-way maps-->
+            <div class="col-md-4 maps">
+                <div class="card maps">
+                    <a href="https://staceymarion.com/fna/" target="_blank" rel="noopener noreferrer">
+                        <img class="card-img-top" src="assets/fna1.PNG" alt="Wisconsin Fire Needs Assessment"></a>
+					</a>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <a href="https://staceymarion.com/fna/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary btn-block">Wisconsin Fire Needs Assessment <br><i>(web story)</i></a>
+                    </div>
+                </div>
+            </div>
+
             <div class="col-md-4 maps">
                 <div class="card maps">
                     <a href="portfolio/pbc.html"> 
@@ -110,16 +122,6 @@
                 </div>
             </div>
 
-            <div class="col-md-4 maps">
-                <div class="card maps">
-                    <a href="portfolio/veracruz.html">
-                        <img class="card-img-top" src="assets/veracruz_thumbnail.PNG" alt="From Veracruz to Wisconsin"></a>
-                    <div class="card-body">
-                        <h4 class="card-title"></h4>
-                        <a href="portfolio/veracruz.html" class="btn btn-secondary btn-block">From Veracruz to Wisconsin <i>(storymap)</i></a>
-                    </div>
-                </div>
-            </div>
 
             <div class="col-md-4 maps">
                 <div class="card maps">
@@ -195,6 +197,18 @@
 
             <div class="col-md-4 maps">
                 <div class="card maps">
+                    <a href="portfolio/veracruz.html">
+                        <img class="card-img-top" src="assets/veracruz_thumbnail.PNG" alt="From Veracruz to Wisconsin"></a>
+                    <div class="card-body">
+                        <h4 class="card-title"></h4>
+                        <a href="portfolio/veracruz.html" class="btn btn-secondary btn-block">From Veracruz to Wisconsin <i>(storymap)</i></a>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- <div class="col-md-4 maps">
+                <div class="card maps">
                     <a href="portfolio/pbc_water.html">
                         <img class="card-img-top" src="assets/pbc_water_thumb.png" alt="Pheasant Branch Wetland">
                     </a>
@@ -203,7 +217,7 @@
                         <a href="portfolio/pbc_water.html" class="btn btn-secondary btn-block">Degradation of the Pheasant Branch Wetland</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
         </div>
