--- a/run.html
+++ b/run.html
@@ -70,7 +70,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-6 resume" style="padding-top:1%;">
+            <div class="col-md-6 resume run" style="padding-top:1%;">
                 <div class="text-center" style="color:white;">
                     <br>
                     <p>
@@ -79,7 +79,9 @@
                     <br>
                     <h2 style="font-size: 22px;">Trail Running</h2>
                     <br>
-                    <p> Ultra-Trail Harricana 125 k | Sept 10, 2021 | 5th female/15th overall 
+                    <p style = "font-size: 14px;"> TDS (UTMB Mont-Blanc) 145 k | Aug 22, 2022 | 9th female/52nd overall
+                        <br> 
+                        Ultra-Trail Harricana 125 k | Sept 10, 2021 | 5th female/15th overall 
                         <br>
                         White River 50 M  | July 31, 2021  | 1st overall
                         <br> 
@@ -96,7 +98,7 @@
                     <br>
                     <h2 style="font-size: 22px;">Nordic Skiing</h2>
                     <br>
-                    <p> American Birkebeiner Skate ~50k  | 2014-2021  | Highest result: 18th female/104 overall
+                    <p style = "font-size: 14px;"> American Birkebeiner Skate ~50k  | 2014-2023  | Best result: 18th female
                         <br> 
                         Noquemanon Skate 50k   | January 2020 | 1st female/29th overall
                         <br>
@@ -104,19 +106,17 @@
                     <br>
                     <h2 style="font-size: 22px;">Coaching</h2>
                     <br>
-                    <p> I currently volunteer with Momentum Northwest MS/HS nordic ski team
+                    <p style = "font-size: 14px;"> Momentum Northwest Lead Coach/Assistant Coach | Winter 2021-2023 | MS/HS Junior team
                         <br> 
-                        MadNorSki Assistant Coach | Winter 2020-2021 | MS/HS Juniors program
-                        <br>
-                        MadNorSki Volunteer Coach | Winter 2019-2020 | MS/HS Juniors program
+                        MadNorSki Assistant Coach | Winter 2019-2021 | MS/HS Junior team
                     </p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="card">
-                    <!-- 
-                        <img class="card-img-top mx-auto" src="assets/DSC01074-2.png" alt="Portrait" style="width:80%; padding-left:1%;">
-					-->
+                    
+                        <!-- <img class="card-img-top mx-auto" src="assets/DSC01074-2.png" alt="Portrait" style="width:80%; padding-left:1%;"> -->
+					
                 </div>
             </div>
             <div class="col-md-10 text-center">
