--- a/fire.html
+++ b/fire.html
@@ -23,6 +23,7 @@
 </head>
 
 <body class="fire">
+    <div class = "bg-image">
     <div class="container-fluid">
         <div class="row" style="height:60px;"> <!-- bumper row -->
         </div>
@@ -69,7 +70,7 @@
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
                     <p class="portfolio-description">
-                        I am an advocate of "good fire" as a tool for conserving natural areas. I currently serve on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I collaboratively implement initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. I will be stepping down as Vice Chair this December as I transition to my new home in Washington State. 
+                        I am an advocate of "good fire" as a tool for conserving natural areas. Between 2018-2021 I served on the Board of the <a href="https://prescribedfire.org/" target="_blank" rel="noopener noreferrer"> Wisconsin Prescribed Fire Council</a>, where I collaboratively implemented initiatives increasing prescribed burn capacity in the state. I previously worked as a fire practitioner, participating in over 200 prescribed burns in Wisconsin. 
                     </p> 
                     <br><br>
                     <h2 class="portfolio-title">Web Story: A prescribed fire needs assessment for Wisconsin <br> </h2>
@@ -87,7 +88,7 @@
         <div class="row" style="height:60px;"> <!-- bumper row -->
         </div>
 
-         <div class="container">
+         <!-- <div class="container">
             <div class="row fire">
                 <div class="offset-md-1 col-md-10 offset-md-1">
                     <h2 class="portfolio-title">Web Map: A look at certified prescribed burn programs across the country<br> </h2>
@@ -96,11 +97,11 @@
                     </p> 
                 </div>   
             </div>
-        </div>
+        </div> -->
 
-        <div class="row" style="margin-left:9%; margin-right:9%;"> 
+        <!-- <div class="row" style="margin-left:9%; margin-right:9%;"> 
             <iframe src="https://staceymarion.com/burnProgram/" width="100%" height="750px" frameborder="0" allow="geolocation"></iframe></a></li>
-        </div>
+        </div> -->
 
         <div class="row" style="height:60px;"> <!-- bumper row -->
         </div>
@@ -149,6 +150,7 @@
     <!--put your external script links here-->
     <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
+    </div>
 </body>
 
 </html>
